Fix brush z-index issues

--- a/src/css/night/controls/_brush_canvas.sass
+++ b/src/css/night/controls/_brush_canvas.sass
@@ -24,6 +24,6 @@
   top: 0
   left: 0
   border-radius: 50%
-  z-index: 10000
+  z-index: 1
   border: 2px solid white
   display: none
