--- a/src/css/night/controls/_color-picker.sass
+++ b/src/css/night/controls/_color-picker.sass
@@ -38,6 +38,7 @@
     width: 240px
     height: 240px
     padding: 20px
+    z-index: 2
 
     bottom: $controlsHeight + 35px
     right: $controlsWidth / 2 - 120px
